@@ -18,6 +18,7 @@ Bug Fixes::
 * apply text transform and formatting when checking height of heading for orphan prevention
 * apply text transform and formatting when computing height of background for caption
 * honor theme settings (`prose-margin-inner` and `prose-text-indent-inner`) for inner paragraphs in abstract
+* only indent text that starts at left margin (i.e., when text align is left or justify) (#2298)
 
 Compliance::
 
